[package]
name = "database-tree"
version = "0.1.0-alpha.6"
authors = ["Jorge Thomas <info@notakrista.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/akrista/gate"
repository = "https://github.com/akrista/gate"
readme = "README.md"
description = "Database tree structure"

[dependencies]
thiserror = "1.0"
chrono = "0.4"
anyhow = "1.0.38"
